# game_of_life_reverse

./: .gitignore  Cargo.toml  README.md
config/: default.yaml  default_cadical.yaml  default_parkissat.yaml
config/examples/: complex.yaml
examples/: benchmark_multithreaded.rs  solver_demo.rs
input/target_states/: beacon.txt  blinker.txt  glider.txt  hello_world.txt  name.txt
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/game_of_life/: grid.rs  io.rs  mod.rs  rules.rs
src/reverse/: mod.rs  problem.rs  solution.rs  validator.rs
src/sat/: constraints.rs  encoder.rs  mod.rs  parkissat_solver.rs  solver.rs  solver_factory.rs  variables.rs
src/utils/: display.rs  mod.rs
