[package]
name = "game_of_life_reverse"
version = "0.1.0"
edition = "2021"

[dependencies]
cadical = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10.0"
thiserror = "1.0"
itertools = "0.12"

[dev-dependencies]
tempfile = "3.0"
