[package]
name = "game_of_life_reverse"
version = "0.1.0"
edition = "2021"

[dependencies]
cadical = "0.1"
parkissat-sys = { path = "../parkissat-sys" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.98"
rayon = "1.10.0"
thiserror = "2.0.12"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.20"
